# Computational-project

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py
notebooks/: Add_MAE_210_models.txt  Exp_custom_spike_cst_210_models.txt  Fe_Octhedral_complexes_rel_m_splitting.csv  File_management_for_energy_calculation.ipynb  Group_original_database_with_ligands_15837.txt  Symbolic_regressor.ipynb  Visualization_functions.ipynb  real_world_energies_and_relative_metal_radius.csv
notebooks/1-Iron/: ABEMAX_TMC_1.gmol  ABIJEB_TMC_1.gmol  ABITEM_TMC_1.gmol  ABITUC01_TMC_1.gmol  ABOZOJ_TMC_1.gmol  ACAZFE_TMC_1.gmol  ACEDIV_TMC_1.gmol  ACEYOW_TMC_1.gmol  ACODUR_TMC_1.gmol  ACOFAZ_TMC_1.gmol  ACOREQ_TMC_1.gmol  ACORIU01_TMC_1.gmol  ACOROA_TMC_1.gmol  ACORUG_TMC_1.gmol  ACOSAN_TMC_1.gmol  ACOTIV_TMC_1.gmol  ADAQUU_TMC_1.gmol  ADAREF_TMC_1.gmol  ADEJOK_TMC_1.gmol  ADEQIL_TMC_1.gmol  ADIGAV_TMC_1.gmol  ADIGEB_TMC_1.gmol  ADIZIW_TMC_1.gmol  ADOSIW_TMC_1.gmol  AETSFE_TMC_1.gmol  AFANEB_TMC_1.gmol  AFEZUI_TMC_1.gmol  AFIBAU_TMC_1.gmol  AFIGEE_TMC_1.gmol  AFUGIS_TMC_1.gmol  AFUHOB01_TMC_1.gmol  AFUTEB_TMC_1.gmol  AFUYAD_TMC_1.gmol  AGESOV_TMC_1.gmol  AGIZEX_TMC_1.gmol  AGUDIQ_TMC_1.gmol  AGUGIS_TMC_1.gmol  AGUGOY_TMC_1.gmol  AGULUL_TMC_1.gmol  AGUMAS_TMC_1.gmol  (+3290 more)
notebooks/High_spin_SPE_calculation/: AROFIX_1_opt_6_SPE.com  BEDLOM_1_opt_6_SPE.com  BETCUB_1_opt_6_SPE.com  BOFFIL_1_opt_5_SPE.com  BOMFER_1_opt_5_SPE.com  BOMXAC10_1_opt_6_SPE.com  BQIFEC10_1_opt_5_SPE.com  CAFNIG_1_opt_6_SPE.com  CAXLIW_1_opt_6_SPE.com  CEYSAA_1_opt_5_SPE.com  CIDZFE_1_opt_6_SPE.com  (+139 more)
tests/: test_example_module.py
(+301 files in other folders)
